kubernetes/components/cilium/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: hubble
  namespace: cilium
  annotations:
    # ExternalDNS configuration for Cloudflare
    external-dns.alpha.kubernetes.io/target: PLACEHOLDER
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    # Homepage Service Discovery
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Observability"
    gethomepage.dev/name: "Hubble"
    gethomepage.dev/icon: "/icons/hubble.svg"
    gethomepage.dev/weight: "5"
    gethomepage.dev/href: "https://PLACEHOLDER"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=hubble-ui"

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER`)
      priority: 10
      middlewares:
        - name: chain-mfa-auth
          namespace: ingress-controller
      services:
        - kind: Service
          name: hubble-ui
          port: 80
  tls:
    secretName: hubble-tls-cert
